[gd_scene load_steps=3 format=3 uid="uid://bc6pw16cf2w7c"]

[ext_resource type="FontFile" uid="uid://nr33b6jxe2of" path="res://assets/fonts/VollkornSC-Regular.ttf" id="1_8nj7a"]
[ext_resource type="Script" path="res://scripts/menu_button.gd" id="1_t282o"]

[node name="Button" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
theme_override_colors/font_hover_pressed_color = Color(1, 0.839216, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.839216, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_8nj7a")
text = "Text"
flat = true
script = ExtResource("1_t282o")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="ready" from="." to="." method="_on_ready"]
